@@ -31,7 +31,6 @@ import slimeknights.tconstruct.tools.TinkerModifiers;
 
 import javax.annotation.Nullable;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static slimeknights.tconstruct.library.recipe.modifiers.adding.IDisplayModifierRecipe.withModifiers;
@@ -150,9 +149,9 @@ public class OverslimeModifierRecipe implements ITinkerStationRecipe, IDisplayMo
   @Override
   public List<ItemStack> getDisplayItems(int slot) {
     if (slot == 0) {
-      return Arrays.asList(slimeknights.tconstruct.library.recipe.TinkerIngredients.getItems(ingredient));
+      return List.of(slimeknights.tconstruct.library.recipe.TinkerIngredients.getItems(ingredient));
     }
-    return Collections.emptyList();
+    return List.of();
   }
   @Override
   public List<ItemStack> getToolWithoutModifier() {
